--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "final-form": "^4.20.2",
     "form-data": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-final-form-hooks": "^2.0.2",
     "react-redux": "^7.2.4",
